--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,39 @@
+<mat-toolbar color="primary" class="expanded-toolbar">
+  <span>
+    <button mat-button routerLink="/">{{title}}</button>
+    <button mat-button routerLink="/">
+      <mat-icon>home</mat-icon>
+    </button>
+  </span>
+  <div fxLayout="row" fxShow="false" fxShow.gt-sm>
+    <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
+      <div class="input-group">
+        <input class="input-group-field" type="search" value="" placeholder="Search" formControlName="search">
+        <div class="input-group-button"><button mat-flat-button color="accent">
+            <mat-icon>search</mat-icon>
+          </button></div>
+      </div>
+    </form>
+  </div>
+  <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
+    <mat-icon>menu</mat-icon>
+  </button>
+</mat-toolbar>
+<mat-menu x-position="before" #menu="matMenu">
+  <button mat-menu-item routerLink="/">
+    <mat-icon>home</mat-icon> Home
+  </button>
 
-{{title}}
-<mat-slider min="1" max="5" step="0.5" value="1.5"></mat-slider>
-<mat-slider min="1" max="5" step="0.5" value="1.5"></mat-slider>
-<mat-slider min="1" max="5" step="0.5" value="1.5"></mat-slider>
-
+  <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
+    <div class="input-group">
+      <input class="input-group-field" type="search" value="" placeholder="Search" formControlName="search">
+      <div class="input-group-button"><button mat-button routerLink="/">
+          <mat-icon>magnify</mat-icon>
+        </button></div>
+    </div>
+  </form>
+</mat-menu>
+<router-outlet></router-outlet>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
